✍: 撤回依赖变更

--- a/pom.xml
+++ b/pom.xml
@@ -122,8 +122,8 @@
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>javacv-platform</artifactId>
-            <version>1.5.3</version>
+            <artifactId>opencv</artifactId>
+            <version>4.3.0-1.5.3</version>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
@@ -159,8 +159,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -203,8 +204,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -247,8 +249,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -291,8 +294,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -335,8 +339,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -379,8 +384,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -423,8 +429,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
@@ -467,8 +474,9 @@
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.5.3</version>
+                    <artifactId>opencv</artifactId>
+                    <version>4.3.0-1.5.3</version>
+                    <classifier>${profileActive}</classifier>
                 </dependency>
                 <dependency>
                     <groupId>org.bytedeco</groupId>
