--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,17 +20,31 @@ modules:
 spring:
   application:
     name: sonic-agent
-  rabbitmq:
-    host: 81.70.118.76
-    port: 5672
-    username: guest
-    password: guest
-    virtual-host: sonic
-    listener:
-      simple:
-        acknowledge-mode: manual
-    publisher-confirm-type: correlated
-    publisher-returns: true
+
+rocketmq:
+  name-server: 81.70.118.76:9876
+  producer:
+    # 消息超过4kb则压缩
+    compress-message-body-threshold: 4096
+    # 消息最大为4kb
+    max-message-size: 4194304
+    # 生产环境请配置ACL
+    # 必须配置组，否则启动报错
+    group: TEST_DATA_GROUP
+  topic:
+    # 测试任务topic
+    test-task-topic: TEST_TASK_TOPIC
+    # 测试数据topic
+    test-data-topic: TEST_DATA_TOPIC
+    # 任务超时topic
+    timeout-test-topic: TIMEOUT_TEST_TOPIC
+  group:
+    # 测试任务group
+    test-task-group: TEST_TASK_GROUP
+    # 测试数据group
+    test-data-group: TEST_DATA_GROUP
+    # 任务超时group
+    timeout-test-group: TIMEOUT_TEST_GROUP
 
 logging:
   file:
