修复遗漏发送的agentId & 修复io.appium-java-client:java-client导致mac连接本地appium server失败问题 & 增加分配中的测试状态 & 测试任务线程管理（为中断准备的）

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 sonic:
   agent:
-    host: localhost
+    host: 127.0.0.1
     port: 7777
     key: 7bbc50da-1c7b-43e7-9d5d-4e8a86fa896a
   server:
-    host: localhost
+    host: 127.0.0.1
     folder-port: 8094
     transport-port: 8095
 
