--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,9 +12,12 @@ modules:
   android:
     enable: true
   ios:
-    enable: true
+    enable: false
+    wda-bundle-id: com.sonic.wda
+    wda-ipa-name: sonic-wda.ipa
   webview:
-    enable: true
+    enable: false
+    chrome-driver-debug-port: 7778
     chrome-driver-path: "/Applications/Google Chrome.app/Contents/MacOS/chromedriver"
 
 spring:
