--- a/config/application-prod.yml
+++ b/config/application-prod.yml
@@ -7,7 +7,7 @@ sonic:
     # 替换为前端新增Agent生成的key
     key: 29002272-4659-4808-a804-08ce3388b136
   server:
-    # 如果跨网段，这个host改成后端的port
+    # 如果跨网段，这个host改成后端的host
     host: localhost
     # 如果跨网段，这个port改成后端文件中心的port（一般不变）
     folder-port: 8094
@@ -18,12 +18,20 @@ modules:
   # 安卓模块配置
   android:
     enable: true
+    # 是否开启远程adb调试功能
+    use-adbkit: true
   # iOS模块配置
   ios:
+    enable: true
+    #替换为你自己使用的wda的bundleId，正常要添加.xctrunner后缀，建议使用公司的开发者证书
+    wda-bundle-id: com.facebook.WebDriverAgentRunner.xctrunner
+  appium:
     enable: true
   # 在线webView调试模块配置
   webview:
     enable: true
+    # 谷歌调试端口，一般不需要修改（默认0使用随机端口，如果需要开启防火墙给外部使用，请设置固定端口如7778）
+    chrome-driver-debug-port: 0
     # Agent机器上的chrome浏览器的driver路径，可以去http://npm.taobao.org/mirrors/chromedriver/下载
     chrome-driver-path: C:\Program Files\Google\Chrome\Application\chromedriver.exe
 
@@ -37,4 +45,3 @@ logging:
       clean-history-on-start: true
       #保留天数
       max-history: 3
-
