--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,10 +11,12 @@ sonic:
 modules:
   android:
     enable: true
+    use-adbkit: false
   ios:
+    enable: false
+    wda-bundle-id: com.sonic.wda.xctrunner
+  appium:
     enable: true
-    wda-bundle-id: com.sonic.wda
-    wda-ipa-name: sonic-wda.ipa
   webview:
     enable: true
     chrome-driver-debug-port: 7778
