--- a/config/application-sonic-agent.yml
+++ b/config/application-sonic-agent.yml
@@ -1,12 +1,14 @@
 zookeeper:
   # zookeeper的ip地址，对应server的zookeeper，不能填localhost、127.0.0.1之类的无效ipv4
-  registry-host: 192.168.0.2
+#  registry-host: 192.168.0.187
+  registry-host: 127.0.0.1
   # zookeeper的端口
   registry-port: 2181
   # 本机网卡ip地址，不能填localhost、127.0.0.1之类的无效ipv4
-  instance-host: 192.168.0.2
+#  instance-host: 192.168.0.194
+  instance-host: 192.168.0.194
 
-# 一般不需要改动
+# 一般不需要动，懂的可以定制
 spring:
   cloud:
     zookeeper:
@@ -21,7 +23,7 @@ sonic:
     # 替换为Agent服务的端口，可以自行更改
     port: 7777
     # 替换为前端新增Agent生成的key
-    key: 235a35fd-5d0d-4533-905d-30d32902a12b
+    key: 8414e223-89ff-4545-a81c-69c1db9545f0
     cabinet:
       # 是否使用Sonic机柜，可以前往https://sonic-cloud.gitee.io/#/Cabinet了解更多
       enable: false
@@ -38,7 +40,7 @@ modules:
     use-adbkit: true
   ios:
     # 如果不需要连接iOS设备，请将true改为false。开启的windows用户请确保本机已安装iTunes
-    enable: true
+    enable: false
     # 替换为你自己使用的wda的bundleId，如果没有.xctrunner后缀会自动补全，建议使用公司的开发者证书
     wda-bundle-id: com.sonic.WebDriverAgentRunner.xctrunner
   appium:
